# Image-Processing

./: README.md  Terminal commands (Linux Mint)
src/: CMakeLists.txt  ColorConfig.h  EdgeDetector.h  Image.cpp  Image.h  ImageBuffer.h  ImageCreation.cpp  ImageCreation.h  ImageProcessing.cpp  ImageProcessing.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessoring.cpp  ImageProcessoring.h  ProcessingConfig.cpp  ProcessingConfig.h  TransformationsConfig.h  VideoCreation.cpp  VideoCreation.h  VideoProcessing.cpp  VideoProcessing.h  main.cpp  schrift.h
